USEID-1037: Fix text alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,7 @@ body {
 }
 .banner-text {
     margin: 0;
+    text-align: center;
 }
 
 .success-header {
